--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html, body {
 	margin: 0;
 	padding: 0;
 }
-*::-webkit-scrollbar {
+/**::-webkit-scrollbar {
     cursor: default;
     height: 0.25rem;
     width: 0.25rem;
@@ -20,7 +20,7 @@ html, body {
 *::-webkit-scrollbar-thumb {
     background-color: #18bc9c;
     border-radius: 0.25rem;
-}
+}*/
 a {
 	text-decoration: none;
 	transition: .5s ease;
@@ -109,10 +109,13 @@ a:hover {
 /*Header Nav Section Element Starts*/
 header {
 	padding-top: 10px;
+	position: relative;
+	z-index: 999;
 }
 .header-border {
 	border-bottom: 1px solid #EAEAE7;
 	padding-bottom: 12px;
+	background-color: #fff;
 }
 .navbar {
 	padding-left: 0;
@@ -324,7 +327,7 @@ header {
     box-sizing: border-box;
     display: block;
     width: 100%;
-    z-index: 1051;
+    z-index: 1051!important;
 }
 .bootstrap-select .dropdown-menu {
     padding: .5rem;
@@ -1406,6 +1409,76 @@ div.custom-control-right .custom-control-label::before {
 }
 /*City Search Result Section Ends Here*/
 /*Search Results Page Section Starts Here*/
+.bootstrap-select .dropdown-toggle .filter-option-inner-inner {
+    overflow: hidden;
+    max-width: 125px;
+    text-overflow: ellipsis;
+}
+.bootstrap-select.show-tick .dropdown-menu span.check-mark {
+    position: absolute;
+    top: 12px;
+    left: 10px;
+    height: 23px;
+    width: 23px;
+    background-color: #fff;
+    color: transparent;
+	border: 2px solid #D8D8D4;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	display: block!important;
+}
+.bootstrap-select.show-tick .dropdown-menu .selected span.check-mark {
+    position: absolute;
+    top: 12px;
+    left: 10px;
+    height: 23px;
+    width: 23px;
+    background-color: #18BC9C;
+	border: 2px solid #18BC9C;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	display: inline-block!important;
+	z-index: 9999!important;
+}
+.bootstrap-select .dropdown-menu li a span.check-mark {
+    display: none;
+}
+.bootstrap-select .dropdown-item .selected >  .dropdown-menu li a span.check-mark {
+	display: block;
+	z-index: 9999!important;
+}
+.bootstrap-select.show-tick .dropdown-menu li a span.text {
+    margin-left: 25px;
+}
+.bootstrap-select>.dropdown-menu.show {
+    width: auto!important;
+    z-index: 9999!important;
+    position: relative;
+}
+/* Create the checkmark/indicator (hidden when not checked) */
+.bootstrap-select.show-tick .dropdown-menu .selected span.check-mark:after {
+ 	content: "";
+ 	position: absolute;
+ 	display: block;
+ 	top: 2px;
+ 	left: 6px;
+ 	font-size: 12px;
+ 	color: #fff!important;
+}
+/* Style the checkmark/indicator */
+.filter-check-container .checkmark:after {
+	left: 7px;
+	top: 4px;
+	width: 5px;
+	height: 10px;
+	border: solid white;
+	border-width: 0 2px 2px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
 /*Search Page Filter Styling*/
 .btn-filter {
 	background-color: #fff;
@@ -1542,27 +1615,47 @@ div.custom-control-right .custom-control-label::before {
 .for-padding-24 {
 	padding-top: 24px;
 	padding-bottom: 24px;
+	position: relative;
+	z-index: 99;
 }
 .search-page-result {
-	height: 80vh;
-	width: 100%;
 	position: relative;
 }
 .search-page-left-content {
-	position: absolute;
-	overflow-x: hidden;
-	left: 0;
-	top: 0;
+	min-height: 100%;
+	position: relative;
+	z-index: 9;
+	background-color: #fff;
+}
+.search-page-left-content-full-wrapper {
 	margin-left: 40px;
+}
+.map-wrapper-content {
+	position: relative;
+}
+.city-search-result-content-map {
+	position: fixed;
+	right: 0;
+	top: 0;
+	float: right;
+	height: 100vh;
+	width: 100%;
+	padding-left: 0;
+	padding-right: 0;
+	z-index: 1!important;
+}
+#map {
 	height: 100%;
-	overflow-y: auto;
+	width: 100%;
+	padding-left: 0;
+	padding-right: 0;
+	z-index: 1!important
 }
 .search-page-city-content {
 	border-bottom: 1px solid #EAEAE7;
 	padding-bottom: 10px;
 	margin-top: 20px;
-	width: 95%;
-	position: relative;
+	width: 100%;
 }
 .search-page-city-content-layout-2 {
 	border-bottom: none;
@@ -1619,22 +1712,24 @@ div.custom-control-right .custom-control-label::before {
 	border-top: 1px solid #EAEAE7;
 	padding-top: 20px;
 }
+.search-page-city-content:last-child {
+	margin-bottom: 180px;
+}
 /*Search Results Page Section Ends Here*/ 
 /*Save Search Floating Section Here*/
 .save-search-float-section {
 	border: 1px solid #EAEAE7;
-	box-sizing: border-box;
 	box-shadow: 0px 100px 96px rgba(97, 97, 78, 0.04), 0px 36.5016px 35.0416px rgba(97, 97, 78, 0.0275993), 0px 17.7209px 17.012px rgba(97, 97, 78, 0.0222516), 0px 8.6871px 8.33962px rgba(97, 97, 78, 0.0177484), 0px 3.43489px 3.2975px rgba(97, 97, 78, 0.0124007);
 	border-radius: 4px;
 	border-left: 2px solid #18BC9C;
 	padding: 20px 20px 20px 30px;
 	background-color: #fff;
-	position: sticky;
-	bottom: 2%;
+	position: fixed;
+	bottom: 5%;
 	left: 0;
-	width: 97%;
-	margin-top: 40px;
-	overflow: hidden;
+	width: 54%;
+	margin-left: 30px;
+	z-index: 99;
 	border-top-left-radius: 0;
 	border-bottom-left-radius: 0;
 }
@@ -1732,15 +1827,6 @@ div.custom-control-right .custom-control-label::before {
 }
 .save-search-modal-body input::placeholder {
 	color: #BABDB7;
-}
-.city-search-result-content-map {
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	right: 0;
-	top: 0;
-	padding-left: 0;
-	padding-right: 0;
 }
 .mapboxgl-canvas:focus {
     border: none;
@@ -1962,8 +2048,8 @@ div.custom-control-right .custom-control-label::before {
 	color: #18BC9C;
 }
 .features-icon-list {
-	padding-top: 12px;
-	padding-bottom: 12px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 .listing-page-space-feature span {
 	font-size: 18px;
@@ -1971,6 +2057,14 @@ div.custom-control-right .custom-control-label::before {
 	padding: 14px;
 	height: 48px;
 	width: 48px;
+	border-radius: 4px;
+	background-color: #E4F4F1;
+}
+.listing-page-space-feature img {
+	color: #18BC9C;
+	padding: 13px;
+	height: 46px;
+	width: 46px;
 	border-radius: 4px;
 	background-color: #E4F4F1;
 }
@@ -2403,6 +2497,11 @@ button.switch-month:active {
 	font-size: 12px;
 	color: #393F3E;
 }
+.listing-booking-collapse-left-content p a:focus {
+	box-shadow: none!important;
+	border: none!important;
+	outline: none!important;
+}
 .listing-booking-collapse-right-content p {
 	font-weight: 500;
 	font-size: 14px;
@@ -2729,17 +2828,20 @@ button.switch-month:active {
 	color: #393F3E;
 }
 .btn-concept-select {
-	font-weight: 700;
-	font-size: 12px;
-	line-height: 16px;
+	font-weight: 700!important;
+	font-size: 12px!important;
+	line-height: 16px!important;
 	color: #747978;
-	background: #FFFFFF;
+	vertical-align: middle;
+	margin: auto;
+	background: #F9F9F8;
+	text-transform: capitalize!important;
 	border: 1px solid #DAE3E1;
 	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
-	border-radius: 4px 0px 0px 4px;
-	padding: 12px 15px;
+	border-radius: 4px 0px 0px 4px!important;
+	padding: 12px 15px!important;
 }
-.btn-concept-select:focus {
+.btn-concept-select:focus, .btn-concept-select.active {
 	color: #393F3E;
 	background: #FFFFFF;
 	border: 1px solid #DAE3E1;
@@ -2770,6 +2872,83 @@ button.switch-month:active {
 	line-height: 16px;
 	color: #9AA09E;
 	margin: 0;
+}
+.file-upload-panel h4 {
+	position: absolute;
+	top: 30%;
+	left: 40px;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 24px;
+	color: #393F3E;
+}
+.file-upload-panel p {
+	width: 100%;
+	height: 100%;
+	text-align: left;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 24px;
+	padding-left: 35px;
+	padding-right: 20px;
+	padding-top: 60px;
+	padding-bottom: 40px;
+	color: #747978;
+	background: #F9F9F8;
+	border: 1px dashed #D8D8D4;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+}
+.file-upload-panel input {
+	position: absolute;
+	margin: 0;
+	padding: 20px 48px;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	outline: none;
+	opacity: 0;
+}
+.upload-files-btn {
+	position: absolute;
+	bottom: 0;
+ 	margin: 0;
+	font-weight: 800;
+	font-size: 14px;
+	line-height: 16px;
+	background: #FFFFFF;
+	color: #393F3E;
+	padding: 12px 24px;
+	border: 1px solid #D8D8D4;
+	box-sizing: border-box;
+	border-radius: 4px;
+}
+.add-files-btn {
+	position: absolute;
+	bottom: 0;
+	left: 40px;
+}
+.start-upload-btn {
+	position: absolute;
+	bottom: 0;
+	left: 180px;
+}
+.upload-files-btn:hover, .upload-files-btn:active {
+	background: #FFFFFF;
+	color: #393F3E;
+	border: 1px solid #D8D8D4;
+}
+.upload-btn-wrapper {
+	overflow: hidden;
+}
+.upload-btn-wrapper input[type=file] {
+	position: absolute;
+	left: 0;
+	top: 0;
+	opacity: 0;
+	pointer-events: auto!important;
 }
 /*Project Styling*/
 /*Payment Styling*/
@@ -2893,18 +3072,151 @@ button.switch-month:active {
     border-radius: 4px;
 }
 /*Payment Styling*/
-/*File Upload Styling*/
-
-
-/*File Upload Styling*/
 
 /*Booking Page Left Content Ends*/
 /*Booking Page Styling Section Ends Here*/
+
+/*Success Page Styling Starts Here*/
+.success-page-right-content h4 {
+	font-weight: 800;
+	font-size: 20px;
+	line-height: 27px;
+	color: #393F3E;
+}
+.success-page-right-content p {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 19px;
+	color: #747978;
+}
+.success-page-blank-space {
+	height: 200px;
+}
+.success-page-additional-service-top {
+	background: #F9F9F8;
+	border: 1px solid #EAEAE7;
+	box-sizing: border-box;
+	padding: 16px 16px 16px 40px;
+}
+.success-page-additional-service-top h3 {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 27px;
+	color: #393F3E;
+}
+.success-page-additional-service-top p {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 19px;
+	color: #747978;
+}
+.success-page-additional-service-top a {
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 24px;
+	text-decoration-line: underline;
+	color: #18BC9C;
+}
+.success-page-additional-service-top img {
+	border-radius: 4px;
+}
+.success-page-aditional-service-content {
+	margin-top: 20px;
+	margin-bottom: 50px;
+}
+.success-page-accordion-content-border {
+	border-top: 1px solid #E0E0E0!important;
+}
+.success-page-accordion-btn[aria-expanded="true"]:after {
+    position: absolute;
+    top: 40px;
+    right: 24px;
+    transform: rotate(180deg);
+    content: url(../images/caret-down.svg);
+    display: block;
+    color: #C5CDCB;
+}
+.success-page-accordion-btn[aria-expanded="false"]:after {
+    position: absolute;
+    top: 40px;
+    right: 24px;
+    content: url(../images/caret-down.svg);
+    display: block;
+    color: #C5CDCB;
+}
+.success-page-accordion-btn[aria-expanded="true"] > .success-additional-service-accordion img {
+    background-color: #E4F4F1;
+}
+.success-additional-service-accordion img {
+	padding: 12px;
+	border-radius: 4px;
+	background-color: #EAEAE7;
+}
+.success-additional-service-accordion h6 {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 19px;
+	color: #393F3E;
+	margin-bottom: 0;
+	margin-top: 0;
+	margin-left: 20px;
+}
+.success-additional-service-accordion p {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	color: #9AA09E;
+	margin-left: 20px;
+	margin-bottom: 0;
+}
+.success-page-accordion-content-border h6 {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 19px;
+	color: #393F3E;
+	margin-bottom: 5px;
+}
+.success-page-accordion-content-border p {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	color: #9AA09E;
+	margin-bottom: 10px;
+}
+.additional-services-modal-dialogue {
+	max-width: 575px;
+}
+.inquire-modal-service-box {
+	background: #FFFFFF;
+	border: 1px solid #EAEAE7;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	padding: 16px 20px;
+}
+.inquire-modal-service-box p {
+	font-weight: 600;
+	font-size: 12px;
+	line-height: 16px;
+	color: #747978;
+	margin-bottom: 0px;
+}
+.inquire-modal-service-box h6 {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 19px;
+	color: #393F3E;
+	text-align: left;
+	margin-bottom: 5px;
+}
+/*Success Page Styling Ends Here*/
 /*Footer Section Starts Here*/
 footer {
 	background-color: #393F3E;
 	color: #fff;
 	padding-top: 90px;
+	z-index: 99999!important;
+	position: relative;
 }
 .footer-first-column svg {
 	width: 80%;
